version 0.X.X - 2022-XX-XX
--------------------------
- Add a new `NTPRolloverException` raised when system time is beyond NTPv3
  rollover (https://en.wikipedia.org/wiki/Network_Time_Protocol#Timestamps)
  Closes #18.

version 0.4.0 - 2021-05-28
--------------------------
- flake8 conformance
- Add ROA Reference ID

version 0.3.4 - 2020-04-28
--------------------------
- Re-release of 0.3.3 (0.3.3 was mistakenly deleted from PyPI)

version 0.3.3 - 2015-07-27
--------------------------
- Change to more permissive MIT license

version 0.3.2 - 2014-02-02
--------------------------
- PEP8 cleanup
- Update descriptions to match RFC 5905. Patch by Yann Ilas.

version 0.3.1 - 2013-07-03
--------------------------
- cleanup
- update FSF address

version 0.3.0 - 2012-09-01
--------------------------
- add a `timeout` parameter to NTPClient.request()
- rewrite tests using the unittest module, add many tests
- cleanup

version 0.2.0 - 2012-04-01
--------------------------
- cleanup
- raise a NTPException when no response is received from server 

version 0.1.8 - 2010-02-20
--------------------------
- change to LGPL license
- cleanup

version 0.1.7 - 2009-12-24
--------------------------
- cleanup
- fix delay computation (thanks to Michael Frère for pointing that out)

version 0.1.6 - 2009-11-01
--------------------------
- cleanup
- when the server doesn't respond within a reasonable interval, let the
  application handle socket.timeout

version 0.1.5 - 2009-07-13
--------------------------
- perform stricter source check upon reception of a response
- small cleanup

version 0.1.4 - 2009-06-04
--------------------------
- add properties to NTPStats to have timestamps converted to local time

version 0.1.3 - 2009-05-18
--------------------------
- fix root delay and root dispersion computation

version 0.1.2 - 2009-05-17
--------------------------
- create request packet after name resolution to avoid name resolution delay

version 0.1.1 - 2009-05-16