@@ -3,6 +3,9 @@ version 0.X.X - 2022-XX-XX
 - Add a new `NTPRolloverException` raised when system time is beyond NTPv3
   rollover (https://en.wikipedia.org/wiki/Network_Time_Protocol#Timestamps)
   Closes #18.
+- Add parameter allowing to select socket address family. Patch by
+  Nicholas Radonicich.
+  Closes #21.
 
 version 0.4.0 - 2021-05-28
 --------------------------
